syntax = "proto3";

option csharp_namespace = "TSoftTest.Shared";

import "google/protobuf/timestamp.proto";

package BoxesPackage;

service BoxService 
{
  rpc BoxStream (EmptyRequest) returns (stream BoxReply);
}

message EmptyRequest 
{	
}

message BoxReply 
{
	BoxClass box = 1;
}

message BoxClass 
{
    int32 id = 1;
    double x = 2;
    double y = 3;
    double width = 4;
    double height = 5;
    double SpeedX = 6;
    double SpeedY = 7;
    uint32 color = 8;
    int64 lastMoveTime = 9;
}
